# garmin-workouts

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
garminworkouts/: __main__.py  main.py
garminworkouts/config/: configreader.py  excelparser.py  includeloader.py
garminworkouts/garmin/: garminclient.py  session.py
garminworkouts/models/: distance.py  duration.py  pace.py  power.py  running_workout.py  workout.py
garminworkouts/utils/: envdefault.py  functional.py  validators.py
sample_workouts/cycling/: ftp-ramp.yaml  ou-3x6.yaml  ou-3x9.yaml  ss-3x12.yaml  ss-4x9.yaml  tempo-3x10.yaml  tempo-3x12.yaml  tempo-3x15.yaml  vo2max-5x3.yaml  vo2max-5x4.yaml
sample_workouts/cycling/inc/: cooldown-default.yaml  warmup-long.yaml  warmup-short.yaml
sample_workouts/running/: 10k-prog.yaml  19k-prog-lr.yaml  easy-10k.yaml  easy-16k.yaml  easy-6k.yaml  easy-8k.yaml  tempo-10k.yaml
sample_workouts/running/inc/: zones.yaml
tests/: conftest.py  test_garmin.py
tests/config/: test_configreader.py  test_configreader.yaml
tests/config/workouts/cycling/: test_configreader.yaml  test_configreader_inc.yaml  test_settings.yaml
tests/config/workouts/running/: test_10k.yaml  test_configreader.yaml  test_settings.yaml
tests/garmin/: test_garminclient.py  test_session.py
tests/models/: test_distance.py  test_duration.py  test_pace.py  test_pacerange.py  test_power.py  test_running_workout.py  test_workout.py
tests/utils/: test_envdefault.py  test_functional.py
